--- a/shades.css
+++ b/shades.css
@@ -16,20 +16,25 @@ body {
 }
 
 .mainBox {
-	width: 20%;
-	padding-bottom: 20%;
-	margin: auto;
+	width: 17%;
+	padding-bottom: 220px;
+	position: relative;
+  	left: 470px;
+	margin: 15px;
 }
 
 h1 {
 	margin: 0;
 	padding: 20px 0;
+	background-color: white;
 }
 
 #message {
 	display: inline-block;
-	width: 10%;
-	margin: auto;
+	margin: 10px;
+	border: 3px solid purple;
+	position: relative;
+	right: 50px;
 }
 
 #stripe {
